fixed index button font size on mobile

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,1 +1,2 @@
 article img{width:100%}
+.index-button{font-size: 2.5em;}
